[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
bytes = "1"
memchr = "2.7.6"
tokio-util = { version = "0.7.17", features = ["codec"] }
thiserror = "2.0.17"
